# share_it

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain
.cargo/: config.toml
frontend/: index.html  load_files.js
frontend2/: nuxt.config.js  package-lock.json  package.json
frontend2/pages/: index.vue
src/: frontend.rs  main.rs  staticfiles.rs  systemd.rs
