[package]
name = "share_it"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = "2"
rocket = "0.4"
rocket_contrib = "0.4.0"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
lazy_static = "1"
walkdir = "2.2"

[build-dependencies]
walkdir = "2.2"
