[package]
name = "share_it"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4.0.0-beta.15"
actix-files = "0.6.0-beta.6"
actix-service = "2.0.0"
mime_guess = "2.0.3"
percent-encoding = "2.1.0"
flexi_logger = "0.18.0"
log = "0.4.14"
futures = "0.3.15"
tokio = { version = "1.8.0", features = ["fs"] }
anyhow = "1.0"
clap = "2"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
lazy_static = "1"
walkdir = "2.2"

[target.'cfg(unix)'.dependencies]
systemd-socket-activation = { git = "https://github.com/aQaTL/systemd-socket-activation", branch = "master" }

[build-dependencies]
walkdir = "2.2"
